--- a/src/Shared/HandyControl_Shared/Themes/Basic/Colors/ColorsDark.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Basic/Colors/ColorsDark.xaml
@@ -30,8 +30,8 @@
 
     <Color x:Key="BorderColor">#3f3f46</Color>
     <Color x:Key="SecondaryBorderColor">#555555</Color>
-    <Color x:Key="BackgroundColor">#eeeeee</Color>
-    <Color x:Key="RegionColor">#1c1c1c</Color>
+    <Color x:Key="BackgroundColor">#2d2d30</Color>
+    <Color x:Key="RegionColor">#1E1E1E</Color>
     <Color x:Key="SecondaryRegionColor">#2d2d30</Color>
     <Color x:Key="ThirdlyRegionColor">#424242</Color>
     <Color x:Key="TitleColor">#326cf3</Color>
