--- a/src/Shared/HandyControl_Shared/Themes/Basic/Colors/Colors.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Basic/Colors/Colors.xaml
@@ -30,9 +30,9 @@
 
     <Color x:Key="BorderColor">#e0e0e0</Color>
     <Color x:Key="SecondaryBorderColor">#757575</Color>
-    <Color x:Key="BackgroundColor">#eeeeee</Color>
+    <Color x:Key="BackgroundColor">#EEEEF2</Color>
     <Color x:Key="RegionColor">#ffffff</Color>
-    <Color x:Key="SecondaryRegionColor">#eeeeee</Color>
+    <Color x:Key="SecondaryRegionColor">#EEEEF2</Color>
     <Color x:Key="ThirdlyRegionColor">White</Color>
     <Color x:Key="TitleColor">#326cf3</Color>
     <Color x:Key="SecondaryTitleColor">#326cf3</Color>
