--- a/src/Shared/HandyControl_Shared/Themes/Styles/Base/PropertyGridBaseStyle.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Styles/Base/PropertyGridBaseStyle.xaml
@@ -74,7 +74,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="hc:PropertyItem">
-                    <GroupBox Style="{StaticResource GroupBoxOriginal}" hc:TitleElement.TitlePlacement="Left">
+                    <GroupBox hc:BorderElement.CornerRadius="0" Style="{StaticResource GroupBoxOriginal}" hc:TitleElement.TitlePlacement="Left">
                         <GroupBox.Header>
                             <TextBlock Padding="0,0,10,0" Width="{Binding Path=(hc:TitleElement.TitleWidth).Value,RelativeSource={RelativeSource TemplatedParent}}" Text="{TemplateBinding DisplayName}" TextTrimming="CharacterEllipsis">
                                 <TextBlock.ToolTip>
@@ -114,8 +114,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="GroupItem">
-                    <Expander Header="{Binding Name}" IsExpanded="True">
-                        <Border BorderThickness="1,0,1,1" BorderBrush="{DynamicResource BorderBrush}" Background="{DynamicResource RegionBrush}" CornerRadius="0,0,4,4">
+                    <Expander hc:BorderElement.CornerRadius="0" Header="{Binding Name}" IsExpanded="True">
+                        <Border BorderThickness="1,0,1,1" BorderBrush="{DynamicResource BorderBrush}" Background="{DynamicResource RegionBrush}" CornerRadius="0">
                             <ItemsPresenter Margin="{TemplateBinding Padding}"/>
                         </Border>
                     </Expander>
@@ -142,14 +142,14 @@
                             </Grid.RowDefinitions>
                             <DockPanel LastChildFill="True" Margin="0,0,0,6">
                                 <hc:ButtonGroup Margin="0,0,6,0" Visibility="{Binding ShowSortButton,RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource Boolean2VisibilityConverter}}" Style="{StaticResource ButtonGroupSolid}">
-                                    <RadioButton Command="interactivity:ControlCommands.SortByCategory" IsChecked="True">
+                                    <RadioButton hc:BorderElement.CornerRadius="0" Command="interactivity:ControlCommands.SortByCategory" IsChecked="True">
                                         <Rectangle Width="16" Height="16" Fill="{StaticResource SortByCategoryDrawingBrush}"/>
                                     </RadioButton>
-                                    <RadioButton Command="interactivity:ControlCommands.SortByName">
+                                    <RadioButton hc:BorderElement.CornerRadius="0" Command="interactivity:ControlCommands.SortByName">
                                         <Rectangle Width="16" Height="16" Fill="{StaticResource SortByNameDrawingBrush}"/>
                                     </RadioButton>
                                 </hc:ButtonGroup>
-                                <hc:SearchBar x:Name="PART_SearchBar" IsRealTime="True" ShowClearButton="True" Style="{StaticResource SearchBarPlus}"/>
+                                <hc:SearchBar hc:BorderElement.CornerRadius="0" x:Name="PART_SearchBar" IsRealTime="True" ShowClearButton="True" Style="{StaticResource SearchBarPlus}"/>
                             </DockPanel>
                             <hc:PropertyItemsControl Grid.Row="1" x:Name="PART_ItemsControl" Style="{StaticResource PropertyItemsControlBaseStyle}">
                                 <hc:PropertyItemsControl.GroupStyle>
