--- a/src/Shared/HandyControl_Shared/Themes/Theme.xaml
+++ b/src/Shared/HandyControl_Shared/Themes/Theme.xaml
@@ -11195,6 +11195,7 @@
 							<MultiTrigger.Conditions>
 								<Condition Property="IsSelected" Value="true" />
 								<Condition Property="IsSelectionActive" Value="false" />
+								<Condition Property="IsFocused" Value="false" />
 							</MultiTrigger.Conditions>
 							<Setter Property="Background" TargetName="Bd" Value="{DynamicResource DarkDefaultBrush}" />
 							<Setter Property="Foreground" Value="{DynamicResource PrimaryTextBrush}" />
